kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails
spec:
  selector:
    app: app
  ports:
    - port: 3000
      targetPort: 3000
