kube/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rails
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: rails.local
    http:
      paths:
      - path: "/users"
        pathType: Prefix
        backend:
          service:
            name: rails
            port:
              number: 3000
